force-app/main/default/objects/Holded_Sales_Channel__mdt/Holded_Sales_Channel__mdt.object-meta.xml
<CustomObject>
    <label>Holded Sales Channel</label>
    <pluralLabel>Holded Sales Channels</pluralLabel>
</CustomObject>