force-app/main/default/objects/Holded_Sales_Channel__mdt/fields/Generic_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Generic_Contact_Id__c</fullName>
    <label>Generic Contact Id</label>
    <type>Text</type>
    <length>40</length>
</CustomField>