force-app/main/default/objects/Holded_Sales_Channel__mdt/fields/Holded_Account__c.field-meta.xml
<CustomField>
    <fullName>Holded_Account__c</fullName>
    <label>Holded Account</label>
    <type>Text</type>
    <length>80</length>
</CustomField>